--- a/backend/test/coverage_html/index.html
+++ b/backend/test/coverage_html/index.html
@@ -18,7 +18,7 @@
 <div id="header">
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">58%</span>
+            <span class="pc_cov">55%</span>
         </h1>
         <img id="keyboard_icon" src="keybd_closed.png" alt="Show keyboard shortcuts" />
         <form id="filter_container">
@@ -57,50 +57,50 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>1528</td>
-                <td>539</td>
+                <td>1824</td>
+                <td>748</td>
                 <td>0</td>
-                <td>434</td>
-                <td>57</td>
-                <td class="right" data-ratio="1144 1962">58%</td>
+                <td>532</td>
+                <td>31</td>
+                <td class="right" data-ratio="1305 2356">55%</td>
             </tr>
         </tfoot>
         <tbody>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_auditEmailEndpoint_py.html">D:\Github Files\SingHealth-App\backend\BTS\auditEmailEndpoint.py</a></td>
-                <td>165</td>
-                <td>69</td>
+                <td>97</td>
+                <td>2</td>
                 <td>0</td>
-                <td>80</td>
-                <td>27</td>
-                <td class="right" data-ratio="123 245">50%</td>
+                <td>48</td>
+                <td>2</td>
+                <td class="right" data-ratio="141 145">97%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_auditsEndpoint_py.html">D:\Github Files\SingHealth-App\backend\BTS\auditsEndpoint.py</a></td>
-                <td>213</td>
-                <td>48</td>
+                <td>219</td>
+                <td>22</td>
                 <td>0</td>
-                <td>92</td>
-                <td>15</td>
-                <td class="right" data-ratio="228 305">75%</td>
+                <td>98</td>
+                <td>17</td>
+                <td class="right" data-ratio="276 317">87%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_auditsGetFormEndpoint_py.html">D:\Github Files\SingHealth-App\backend\BTS\auditsGetFormEndpoint.py</a></td>
-                <td>38</td>
+                <td>37</td>
                 <td>1</td>
                 <td>0</td>
                 <td>16</td>
                 <td>3</td>
-                <td class="right" data-ratio="50 54">93%</td>
+                <td class="right" data-ratio="49 53">92%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_constants_py.html">D:\Github Files\SingHealth-App\backend\BTS\constants.py</a></td>
-                <td>4</td>
+                <td>6</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="4 4">100%</td>
+                <td class="right" data-ratio="6 6">100%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_database_py.html">D:\Github Files\SingHealth-App\backend\BTS\database.py</a></td>
@@ -113,12 +113,12 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_imagesEndpoint_py.html">D:\Github Files\SingHealth-App\backend\BTS\imagesEndpoint.py</a></td>
-                <td>74</td>
-                <td>33</td>
+                <td>59</td>
+                <td>47</td>
                 <td>0</td>
                 <td>26</td>
-                <td>4</td>
-                <td class="right" data-ratio="55 100">55%</td>
+                <td>0</td>
+                <td class="right" data-ratio="12 85">14%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_institutionEndpoint_py.html">D:\Github Files\SingHealth-App\backend\BTS\institutionEndpoint.py</a></td>
@@ -140,12 +140,12 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_loginEndpoints_py.html">D:\Github Files\SingHealth-App\backend\BTS\loginEndpoints.py</a></td>
-                <td>96</td>
-                <td>74</td>
+                <td>91</td>
+                <td>72</td>
                 <td>0</td>
                 <td>30</td>
                 <td>0</td>
-                <td class="right" data-ratio="22 126">17%</td>
+                <td class="right" data-ratio="19 121">16%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_recentAuditsEndpoints_py.html">D:\Github Files\SingHealth-App\backend\BTS\recentAuditsEndpoints.py</a></td>
@@ -158,48 +158,57 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_rectificationEndpoints_py.html">D:\Github Files\SingHealth-App\backend\BTS\rectificationEndpoints.py</a></td>
-                <td>139</td>
+                <td>142</td>
                 <td>118</td>
                 <td>0</td>
-                <td>66</td>
+                <td>68</td>
                 <td>0</td>
-                <td class="right" data-ratio="21 205">10%</td>
+                <td class="right" data-ratio="28 210">13%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_staff_tenantEndpoint_py.html">D:\Github Files\SingHealth-App\backend\BTS\staff_tenantEndpoint.py</a></td>
-                <td>54</td>
+                <td>53</td>
                 <td>39</td>
                 <td>0</td>
                 <td>20</td>
                 <td>0</td>
-                <td class="right" data-ratio="15 74">20%</td>
+                <td class="right" data-ratio="14 73">19%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="_Github Files_SingHealth-App_backend_BTS_utils_py.html">D:\Github Files\SingHealth-App\backend\BTS\utils.py</a></td>
-                <td>265</td>
-                <td>90</td>
+                <td>436</td>
+                <td>321</td>
                 <td>0</td>
-                <td>62</td>
+                <td>128</td>
                 <td>3</td>
-                <td class="right" data-ratio="198 327">61%</td>
+                <td class="right" data-ratio="138 564">24%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="BTSApp_py.html">BTSApp.py</a></td>
-                <td>43</td>
+                <td>39</td>
                 <td>0</td>
                 <td>0</td>
                 <td>2</td>
                 <td>0</td>
-                <td class="right" data-ratio="45 45">100%</td>
+                <td class="right" data-ratio="41 41">100%</td>
             </tr>
             <tr class="file">
-                <td class="name left"><a href="test_auditEmail_py.html">test_auditEmail.py</a></td>
-                <td>27</td>
+                <td class="name left"><a href="test_auditEmailEndpoint_py.html">test_auditEmailEndpoint.py</a></td>
+                <td>195</td>
                 <td>1</td>
                 <td>0</td>
-                <td>2</td>
+                <td>52</td>
                 <td>1</td>
-                <td class="right" data-ratio="27 29">93%</td>
+                <td class="right" data-ratio="245 247">99%</td>
+            </tr>
+            <tr class="file">
+                <td class="name left"><a href="test_getAuditsByAuditID_py.html">test_getAuditsByAuditID.py</a></td>
+                <td>31</td>
+                <td>1</td>
+                <td>0</td>
+                <td>6</td>
+                <td>2</td>
+                <td class="right" data-ratio="34 37">92%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="test_getForm_getTenantByInst_py.html">test_getForm_getTenantByInst.py</a></td>
@@ -221,21 +230,21 @@
             </tr>
             <tr class="file">
                 <td class="name left"><a href="test_postAudits_py.html">test_postAudits.py</a></td>
-                <td>188</td>
-                <td>10</td>
+                <td>185</td>
+                <td>9</td>
                 <td>0</td>
                 <td>2</td>
                 <td>1</td>
-                <td class="right" data-ratio="179 190">94%</td>
+                <td class="right" data-ratio="177 187">95%</td>
             </tr>
             <tr class="file">
                 <td class="name left"><a href="test_post_images_py.html">test_post_images.py</a></td>
-                <td>68</td>
-                <td>11</td>
+                <td>80</td>
+                <td>70</td>
                 <td>0</td>
                 <td>6</td>
-                <td>1</td>
-                <td class="right" data-ratio="62 74">84%</td>
+                <td>0</td>
+                <td class="right" data-ratio="10 86">12%</td>
             </tr>
         </tbody>
     </table>
@@ -247,7 +256,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io">coverage.py v5.5</a>,
-            created at 2021-04-13 13:59 +0800
+            created at 2021-04-18 22:06 +0800
         </p>
     </div>
 </div>
